Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-110321

qmlformat runs into an issue with ES classes

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.2.8, 6.5.0, 6.5, 6.6.0
    • 6.5
    • QML: Tooling
    • None
    • d962fe4ab (dev), 121dc8d30 (6.5), 20e181230 (tqtc/lts-6.2)

    Description

      The attached example runs into an error:
      /tmp/test.qml:6:36: [Dom][QmlFile][Parsing] Error: Expected token `,' for .currentItem

      Attachments

        1. test.qml
          0.4 kB
          Fabian Kosmale
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            semih.yavuz Semih Yavuz
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes