qmlformat: Add ECMAScript class reformatter

qmlformat currently discards ES classes, and only reformats the element
list inside that class. Implement a class declaration visitor which
reformats ES classes in qml file.

Fixes: QTBUG-110321
Change-Id: I9fa2561902dbcfde5e8fb041bc5dedcc56bb66cc
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit d962fe4abbf185abb1bc7464a00a93bc0e9d288b)
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>